Adapting reservation requests and domain rules